2014-06-16  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c (xtick2d_callback): Clip r axis tics and tic labels to 
	the bounding box of the plot.
	Bug #1290

2014-06-15  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/plot.c (main) src/win/winmain.c|h:
	Fix persist mode on Windows when reading from a pipe.
	See Bug #1322

2014-06-11  Ethan A Merritt  <merritt@u.washington.edu>

	* src/mouse.c (event_reset) src/qtterminal/QtGnuplotWindow.{h|cpp}:
	Window close events from qt were not being passed through to the main
	program, so "pause mouse close" did not work. Also a backgrounded 
	instance could hang rather than exit when the last plot window closed.
	Bug #1418

	* term/post.trm term/cairo.trm:  The "header" keyword for epslatex
	and related terminals can introduce a string of arbitrary length.
	Therefore it is not safe to try to store it in the fixed length 
	term_options character array.
	Bug #1413

2014-06-04  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/plot.c:  Only if a wxt or windows terminal window is open, the 
	-persist option is handled by keeping the main input loop running. 
	This is unfortunate but maybe the best we can do since we are missing
	a process fork or detach mechanism. This eliminates zombie process when
	no plot windows are open in session.
	Bugs #1308, #1335, #1343

2014-06-01  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/fit.c:  'update' fails if parameter file does not exits yet.
	Provide proper error message.
	See bugs #1385 and #1156

	config/config.nt config/config.mgw:  Sync with config.h from configure
	script.

	config/mingw/Makefile:  Use -pipe option to speed up compilation.

2014-05-27  Ethan A Merritt  <merritt@u.washington.edu>

	* src/datafile.c (df_readascii): Report status DF_UNDEFINED if a data
	value evaluates to the constant "NaN", just as if we calculated it on
	the fly to be e.g. 1/0.
	Bug #1408

2014-05-26  Ethan A Merritt  <merritt@u.washington.edu>

	* term/js/gnuplot_svg.js term/svg.trm: