@@ -1,3 +1,12 @@
+2014-06-17  Ethan A Merritt  <merritt@u.washington.edu>
+
+	* src/graphics.c src/plot2d.c (eval_plots): 
+	Unlike all other axes, log scaling was being applied to the color axis
+	(cb) in do_plot() rather than in the caller eval_plots().
+	This caused "refresh" (as opposed to "replot") to fail.  Move the
+	log-scale correction up to eval_plots() like the other axes.
+	Bug #1425
+
 2014-06-16  Ethan A Merritt  <merritt@u.washington.edu>
 
 	* src/graphics.c (xtick2d_callback): Clip r axis tics and tic labels to 
